--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
           <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
           <h3 class="masthead-title">
-            <a href="/nano" title="Home">{{ site.title }}</a>
+            <a href="/tensor" title="Home">{{ site.title }}</a>
             <small>{{ site.tagline }}</small>
           </h3>
         </div>
